Refined CSS functionality and added comments.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>My Portfolio</title>
 </head>
+
 <body>
     <header>
         <h1>Eric Easthope</h1>
@@ -30,7 +31,7 @@
     <section id="work">
         <h2>Work</h2>
         <div class = "content-box cards">
-            <div class="card-box">
+            <div class="card-box" id="first-project">
                 <img src="./assets/images/grunge-red-work-process-square-260nw-1035090301.webp" alt="">
                 <div class="card-text">
                     <h3 class="card-title">Card 1</h3>
