Added pictures and links to latest projects.

--- a/index.html
+++ b/index.html
@@ -31,41 +31,41 @@
     <section id="work">
         <h2>Work</h2>
         <div class = "content-box cards">
-            <div class="card-box" id="first-project">
+            <a class="card-box" id="first-project" href="https://eeast.github.io/CH1-HoriseonWebsite/">
+                <img src="./assets/images/1675984258935.png" alt="My first project: The Horiseon Website">
+                <div class="card-text">
+                    <h3 class="card-title">Horiseon Website</h3>
+                    <p class="card-lang">HTML, CSS</p>
+                </div>
+            </a>
+            <a class="card-box" href="https://eeast.github.io/CH3-PasswordGenerator/">
+                <img src="./assets/images/CH3-pwgenerator.png" alt="">
+                <div class="card-text">
+                    <h3 class="card-title">Password Generator</h3>
+                    <p class="card-lang">JavaScript</p>
+                </div>
+            </a>
+            <a class="card-box" href="#">
                 <img src="./assets/images/grunge-red-work-process-square-260nw-1035090301.webp" alt="">
                 <div class="card-text">
-                    <h3 class="card-title">Card 1</h3>
-                    <p class="card-lang">Sample Text 1</p>
+                    <h3 class="card-title">Future Project</h3>
+                    <p class="card-lang">Coming Soon</p>
                 </div>
-            </div>
-            <div class="card-box">
+            </a>
+            <a class="card-box" href="#">
                 <img src="./assets/images/grunge-red-work-process-square-260nw-1035090301.webp" alt="">
                 <div class="card-text">
-                    <h3 class="card-title">Card 2</h3>
-                    <p class="card-lang">Sample Text 2</p>
+                    <h3 class="card-title">Future Project</h3>
+                    <p class="card-lang">Coming Soon</p>
                 </div>
-            </div>
-            <div class="card-box">
+            </a>
+            <a class="card-box" href="#">
                 <img src="./assets/images/grunge-red-work-process-square-260nw-1035090301.webp" alt="">
                 <div class="card-text">
-                    <h3 class="card-title">Card 3</h3>
-                    <p class="card-lang">Sample Text 3</p>
+                    <h3 class="card-title">Future Project</h3>
+                    <p class="card-lang">Coming Soon</p>
                 </div>
-            </div>
-            <div class="card-box">
-                <img src="./assets/images/grunge-red-work-process-square-260nw-1035090301.webp" alt="">
-                <div class="card-text">
-                    <h3 class="card-title">Card 4</h3>
-                    <p class="card-lang">Sample Text 4</p>
-                </div>
-            </div>
-            <div class="card-box">
-                <img src="./assets/images/grunge-red-work-process-square-260nw-1035090301.webp" alt="">
-                <div class="card-text">
-                    <h3 class="card-title">Card 5</h3>
-                    <p class="card-lang">Sample Text 5</p>
-                </div>
-            </div>
+            </a>
         </div>
     </section>
     <section id="contact">
