Additional links and README images.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <ul class="content-box">
             <li>phone</li>
             <li>email</li>
-            <li>github</li>
+            <li><a href="https://github.com/eeast">github</a></li>
             <li>twitter</li>
             <li>spotify</li>
         </ul>
