Added group project and other front-end projects

--- a/index.html
+++ b/index.html
@@ -25,17 +25,38 @@
     <section id="about-me">
         <h2>About Me</h2>
         <div class="content-box">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore quod ex corrupti reiciendis laboriosam fugiat sequi qui blanditiis exercitationem? Perspiciatis autem quos officiis commodi totam facere iusto corporis odio in.</p>
+            <p>Hello! My name is Eric Easthope. I am starting my journey into development, and this page is meant to showcase some of the work I have done thus far. My background is in accounting, with most of my programming knowledge coming from UT Austin's Web Development Bootcamp and a handful of college CS courses covering the fundamentals of computer science, data structures, algorithm design and analysis, and a course in advanced programming concepts. I've made a collection of webpages, shown below, as well as a variety of offline applications, ranging from traditional problem solving algorithms to server hosting, HTTP request and response, and even mobile application development. Please take a look at my GitHub page, and reach out to me with any questions! Thank you for visiting!</p>
         </div>
         </section>
     <section id="work">
         <h2>Work</h2>
         <div class = "content-box cards">
-            <a class="card-box" id="first-project" href="https://eeast.github.io/CH1-HoriseonWebsite/">
-                <img src="./assets/images/1675984258935.png" alt="My first project: The Horiseon Website">
+            <a class="card-box" id="first-project" href="https://eeast.github.io/Dude-Wheres-My-Show/">
+                <img src="./assets/images/grunge-red-work-process-square-260nw-1035090301.webp" alt="My first project: The Horiseon Website">
                 <div class="card-text">
-                    <h3 class="card-title">Horiseon Website</h3>
-                    <p class="card-lang">HTML, CSS</p>
+                    <h3 class="card-title">Dude, Where's My Show?</h3>
+                    <p class="card-lang">HTML, CSS, JQuery,<br>MaterializeCSS, Server-side APIs</p>
+                </div>
+            </a>
+            <a class="card-box" href="https://eeast.github.io/CH6-WeatherDashboard/">
+                <img src="./assets/images/1679091796084.png" alt="">
+                <div class="card-text">
+                    <h3 class="card-title">Weather Dashboard</h3>
+                    <p class="card-lang">HTML, Bootstrap, JQuery, dayJS</p>
+                </div>
+            </a>
+            <a class="card-box" href="https://eeast.github.io/CH4-CodeQuiz/">
+                <img src="./assets/images/CH4-CodeQuiz_03.png" alt="">
+                <div class="card-text">
+                    <h3 class="card-title">Code Quiz</h3>
+                    <p class="card-lang">JQuery, Bootstrap</p>
+                </div>
+            </a>
+            <a class="card-box" href="https://eeast.github.io/CH5-WorkDayScheduler/">
+                <img src="./assets/images/1678759755989.png" alt="">
+                <div class="card-text">
+                    <h3 class="card-title">Workday Scheduler</h3>
+                    <p class="card-lang">Javascript, JQuery, dayJS</p>
                 </div>
             </a>
             <a class="card-box" href="https://eeast.github.io/CH3-PasswordGenerator/">
@@ -45,18 +66,11 @@
                     <p class="card-lang">JavaScript</p>
                 </div>
             </a>
-            <a class="card-box" href="#">
-                <img src="./assets/images/grunge-red-work-process-square-260nw-1035090301.webp" alt="">
+            <a class="card-box" href="https://eeast.github.io/CH1-HoriseonWebsite/">
+                <img src="./assets/images/1675984258935.png" alt="">
                 <div class="card-text">
-                    <h3 class="card-title">Future Project</h3>
-                    <p class="card-lang">Coming Soon</p>
-                </div>
-            </a>
-            <a class="card-box" href="#">
-                <img src="./assets/images/grunge-red-work-process-square-260nw-1035090301.webp" alt="">
-                <div class="card-text">
-                    <h3 class="card-title">Future Project</h3>
-                    <p class="card-lang">Coming Soon</p>
+                    <h3 class="card-title">Horiseon Website</h3>
+                    <p class="card-lang">HTML, CSS</p>
                 </div>
             </a>
             <a class="card-box" href="#">
@@ -71,8 +85,8 @@
     <section id="contact">
         <h2>Contact Me</h2>
         <ul class="content-box">
-            <li>phone</li>
-            <li>email</li>
+            <li><a href="tel:+15123644500">phone</a></li>
+            <li><a href="mailto:eeasthope@gmail.com">email</a></li>
             <li><a href="https://github.com/eeast">github</a></li>
             <li>twitter</li>
             <li>spotify</li>
