added image for group project

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>Work</h2>
         <div class = "content-box cards">
             <a class="card-box" id="first-project" href="https://eeast.github.io/Dude-Wheres-My-Show/">
-                <img src="./assets/images/grunge-red-work-process-square-260nw-1035090301.webp" alt="My first project: The Horiseon Website">
+                <img src="./assets/images/GP1-DudeWheresMyShow.png" alt="Image of landing page for project website">
                 <div class="card-text">
                     <h3 class="card-title">Dude, Where's My Show?</h3>
                     <p class="card-lang">HTML, CSS, JQuery,<br>MaterializeCSS, Server-side APIs</p>
