update to redirect to new portfolio url for ghpages

--- a/index.html
+++ b/index.html
@@ -119,4 +119,7 @@
         <h2>&copy;2023 Eric Easthope</h2>
     </footer>
 </body>
+<script>
+    window.location.replace('https://eeast.github.io/portfolio/')
+</script>
 </html>
