remove html from page

--- a/index.html
+++ b/index.html
@@ -10,114 +10,7 @@
 </head>
 
 <body>
-    <header>
-        <h1>Eric Easthope</h1>
-        <nav>
-            <ul>
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#contact">Contact Me</a></li>
-                <li>Resume</li>
-            </ul>
-        </nav>
-    </header>
-    <img id="banner-img" src="./assets/images/cherry blossom bkgnd2_1920x350.jpg" alt="Cherry blossoms from Busan, South Korea" width=100% >
-    <section id="about-me">
-        <h2>About Me</h2>
-        <div class="content-box">
-            <p>Hello! My name is Eric Easthope. I am starting my journey into development, and this page is meant to showcase some of the work I have done thus far. My background is in accounting, with most of my programming knowledge coming from UT Austin's Web Development Bootcamp and a handful of college CS courses covering the fundamentals of computer science, data structures, algorithm design and analysis, and a course in advanced programming concepts. I've made a collection of webpages, shown below, as well as a variety of offline applications, ranging from traditional problem solving algorithms to server hosting, HTTP request and response, and even mobile application development. Please take a look at my GitHub page, and reach out to me with any questions! Thank you for visiting!</p>
-        </div>
-    </section>
-    <section id="webDev">
-        <h2>Web Pages</h2>
-        <div class = "content-box cards">
-            <a class="card-box" id="first-project" href="https://github.com/HunterHester/fusion-fables">
-                <img src="./assets/images/GP2-FusionFables_01.png" alt="Fusion Fables website">
-                <div class="card-text">
-                    <h3 class="card-title">Fusion Fables</h3>
-                    <p class="card-lang">Node, Express, Bootstrap, Handlebars,<br>BCrypt, Sequelize, Moment.js</p>
-                </div>
-            </a> 
-            <a class="card-box" href="https://eeast.github.io/Dude-Wheres-My-Show/">
-                <img src="./assets/images/GP1-DudeWheresMyShow.png" alt="Image of landing page for project website">
-                <div class="card-text">
-                    <h3 class="card-title">Dude, Where's My Show?</h3>
-                    <p class="card-lang">HTML, CSS, JQuery,<br>MaterializeCSS, Server-side APIs</p>
-                </div>
-            </a>
-            <a class="card-box" href="https://github.com/eeast/Family-Map-Client-Server">
-                <img src="" alt="">
-                <div class="card-text">
-                    <h3 class="card-title">Family History Android App</h3>
-                    <p class="card-lang">Java, Android Studio, HTTP</p>
-                </div>
-            </a> 
-            <a class="card-box" href="https://eeast.github.io/CH6-WeatherDashboard/">
-                <img src="./assets/images/1679091796084.png" alt="">
-                <div class="card-text">
-                    <h3 class="card-title">Weather Dashboard</h3>
-                    <p class="card-lang">HTML, Bootstrap, JQuery, dayJS</p>
-                </div>
-            </a>
-            <a class="card-box" href="https://eeast.github.io/CH4-CodeQuiz/">
-                <img src="./assets/images/CH4-CodeQuiz_03.png" alt="">
-                <div class="card-text">
-                    <h3 class="card-title">Code Quiz</h3>
-                    <p class="card-lang">JQuery, Bootstrap</p>
-                </div>
-            </a>
-            <a class="card-box" href="https://eeast.github.io/CH5-WorkDayScheduler/">
-                <img src="./assets/images/1678759755989.png" alt="">
-                <div class="card-text">
-                    <h3 class="card-title">Workday Scheduler</h3>
-                    <p class="card-lang">Javascript, JQuery, dayJS</p>
-                </div>
-            </a>
-            <a class="card-box" href="https://eeast.github.io/CH3-PasswordGenerator/">
-                <img src="./assets/images/CH3-pwgenerator.png" alt="">
-                <div class="card-text">
-                    <h3 class="card-title">Password Generator</h3>
-                    <p class="card-lang">JavaScript</p>
-                </div>
-            </a>
-            <a class="card-box" href="https://eeast.github.io/CH1-HoriseonWebsite/">
-                <img src="./assets/images/1675984258935.png" alt="">
-                <div class="card-text">
-                    <h3 class="card-title">Horiseon Website</h3>
-                    <p class="card-lang">HTML, CSS</p>
-                </div>
-            </a>
-            <!-- 
-            <a class="card-box" href="#">
-                <img src="" alt="">
-                <div class="card-text">
-                    <h3 class="card-title"></h3>
-                    <p class="card-lang"></p>
-                </div>
-            </a> 
-            -->
-        </div>
-    </section>
-    <!-- <section id="other">
-        <h2>Other</h2>
-        <div class="content-box">
-            <p>I've also done several projects outside of web development. Here are a few:</p>
-            <ul>
-                <li><a href="https://github.com/eeast/hwplus"></a></li>
-            </ul>
-        </div>
-    </section> -->
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <ul class="content-box">
-            <li><a href="tel:+15123644500">phone</a></li>
-            <li><a href="mailto:eeasthope@gmail.com">email</a></li>
-            <li><a href="https://github.com/eeast">github</a></li>
-        </ul>
-    </section>
-    <footer>
-        <h2>&copy;2023 Eric Easthope</h2>
-    </footer>
+    <p>redirecting...</p>
 </body>
 <script>
     window.location.replace('https://eeast.github.io/portfolio/')
